Attempt to fix grid-gap issue on safari

--- a/client/src/styles/productDisplay.css
+++ b/client/src/styles/productDisplay.css
@@ -8,7 +8,7 @@
     width: 100%;
     /* grid-template-columns: 1fr 1fr 1fr 1fr; */
     grid-template-columns:  repeat(auto-fill, minmax(225px, 1fr));
-    gap: 5rem;
+    grid-gap: 5rem;
 }
 
 /* // 3-per-row-version
